<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Countdown Timer L</string>
    <string name="tg_button_on">Quick</string>
    <string name="tg_button_off">With Start</string>
    <string name="tg_button_321">5,4...</string>
    <string name="tg_button_none">No</string>
    <dimen name="time_button_height">60dp</dimen>
    <dimen name="time_button_width">60dp</dimen>
    <dimen name="time_button_text_size">24sp</dimen>
    <string name="text_30sec">30sec</string>
    <string name="text_1min"> 1min</string>
    <string name="text_2min"> 2min</string>
    <string name="text_3min"> 3min</string>
    <string name="text_5min"> 5min</string>
    <string name="text_10min">10min</string>
    <string name="text_30min">30min</string>
    <string name="init_0min">00:00</string>
    <string name="text_start">Start</string>
    <string name="text_init">Initialising..</string>
    <string name="dialog_title">Change time.</string>
    <string name="text_min">min</string>
    <string name="text_sec">sec</string>
    <string name="dialog_set">Set</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="dialog_button_name">Button %1$d</string>
    <string name="dialog_30sec">30sec</string>
    <dimen name="dialog_text_size">24sp</dimen>
    <string name="dialog_instruction">30 sec</string>
    <string name="error_str">ERROR!</string>
    <dimen name="button_text_min">28sp</dimen>
    <dimen name="button_text_sec">24sp</dimen>
</resources>
