<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_height="fill_parent"
    android:layout_width="fill_parent"
    android:paddingRight="10dp"
    android:paddingLeft="10dp"
    android:paddingTop="30sp"
    android:background="@drawable/bg">

	<LinearLayout
		android:id="@+id/LL_MainDisplay"
	    android:orientation="vertical"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
	    android:layout_marginLeft="7sp"
	    android:layout_marginRight="7sp"
		android:background="@drawable/lcd_background"
		android:layout_marginBottom="20sp">

		<TextView
			android:id="@+id/tvTimeView"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_gravity="center_horizontal"
			android:padding="10sp"
			android:textColor="#2e474c"
			android:textSize="90sp"
			android:text="@string/init_0min" >
		</TextView>
	</LinearLayout>



	<ViewFlipper xmlns:android="http://schemas.android.com/apk/res/android"
		android:id="@+id/vfSelector" android:layout_width="fill_parent"
		android:layout_height="fill_parent">

		<!-- Start many button layout -->
		<LinearLayout android:orientation="vertical"
			android:layout_width="fill_parent" android:layout_height="wrap_content">

			<LinearLayout android:layout_height="wrap_content"
				android:orientation="vertical" android:id="@+id/LL_MainButton"
				android:layout_width="fill_parent" android:layout_gravity="center_horizontal">

				<Button android:id="@+id/btStartStop" android:layout_height="wrap_content"
					android:layout_width="fill_parent" android:padding="7sp"
					android:layout_margin="5sp" android:layout_gravity="center"
					android:height="110sp" android:textOff="Wait.." android:textOn="00:00"
					android:text="@string/text_start" android:textSize="40sp"
					android:background="@drawable/start_button_bg" android:textColor="#eee">
				</Button>
			</LinearLayout>


			<TableLayout android:id="@+id/TL_SubButton"
				android:layout_height="wrap_content" android:layout_width="wrap_content"
				android:layout_gravity="center_horizontal" android:paddingTop="10sp"
				android:stretchColumns="*">

				<TableRow android:id="@+id/TR_1" android:layout_height="wrap_content"
					android:layout_width="fill_parent">
                    <RelativeLayout
                        android:id="@+id/ll00"
                        android:tag="ll00"
                        android:layout_width="0dp" android:layout_height="wrap_content">
                        <Button android:id="@+id/bt00"
                            android:text="@string/text_10min"
                            android:gravity="end|center"
                            android:tag="bt00"
                            android:layout_width="match_parent" android:layout_height="wrap_content"
                            android:layout_margin="5sp" android:height="60sp"
                            android:textSize="24sp" android:textColor="#eee"
                            android:background="@drawable/plastic_button">
                        </Button>
                        <TextView
                            android:id="@+id/tv_btsec00" android:tag="tv_btsec00"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_alignBaseline="@+id/bt00"
                            android:textSize="18sp" android:textColor="#eee"
                            android:text=":00"
                            />
                    </RelativeLayout>
                    <RelativeLayout
                        android:id="@+id/ll01"
                        android:tag="ll01"
                        android:layout_width="0dp" android:layout_height="wrap_content">
                        <Button android:text="@string/text_5min" android:id="@+id/bt01"
                            android:tag="bt01"
                            android:gravity="end|center"
                            android:layout_width="match_parent" android:layout_height="wrap_content"
                            android:layout_margin="5sp" android:height="60sp"
                            android:textSize="24sp" android:background="@drawable/plastic_button"
                            android:textColor="#eee">
                        </Button>
                        <TextView
                            android:id="@+id/tv_btsec01" android:tag="tv_btsec01"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textSize="18sp" android:textColor="#eee"
                            android:text=":00"
                            android:layout_alignBaseline="@+id/bt01" />
                    </RelativeLayout>
                    <RelativeLayout
                        android:id="@+id/ll02"
                        android:tag="ll02"
                        android:layout_width="0dp" android:layout_height="wrap_content">
                        <Button android:text="@string/text_3min" android:id="@+id/bt02"
                            android:tag="bt02"
                            android:gravity="end|center"
                            android:layout_width="match_parent" android:layout_height="wrap_content"
                            android:layout_margin="5sp" android:height="60sp"
                            android:textSize="24sp" android:background="@drawable/plastic_button"
                            android:textColor="#eee">
                        </Button>
                        <TextView
                            android:id="@+id/tv_btsec02" android:tag="tv_btsec02"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_alignBaseline="@+id/bt02"
                            android:textSize="18sp" android:textColor="#eee"
                            android:text=":00"
                            />
                    </RelativeLayout>
				</TableRow>
				<TableRow android:id="@+id/TR_2" android:layout_height="wrap_content"
					android:layout_width="fill_parent">
                    <RelativeLayout
                        android:id="@+id/ll10"
                        android:tag="ll10"
                        android:layout_width="0dp" android:layout_height="wrap_content">
						<Button android:text="@string/text_2min" android:id="@+id/bt10"
							android:tag="bt10"
							android:gravity="end|center"
							android:layout_width="match_parent" android:layout_height="wrap_content"
							android:layout_margin="5sp" android:height="60sp"
							android:textSize="24sp" android:background="@drawable/plastic_button"
							android:textColor="#eee">
						</Button>
						<TextView
                            android:id="@+id/tv_btsec10" android:tag="tv_btsec10"
							android:layout_width="match_parent"
							android:layout_height="wrap_content"
                            android:layout_alignBaseline="@+id/bt10"
							android:textSize="18sp" android:textColor="#eee"
							android:text=":00"
							/>
                    </RelativeLayout>
                    <RelativeLayout
                        android:id="@+id/ll11"
                        android:tag="ll11"
                        android:layout_width="0dp" android:layout_height="wrap_content">
                        <Button android:text="@string/text_1min" android:id="@+id/bt11"
                            android:tag="bt11"
                            android:gravity="end|center"
                            android:layout_width="match_parent" android:layout_height="wrap_content"
                            android:layout_margin="5sp" android:height="60sp"
                            android:textSize="24sp" android:background="@drawable/plastic_button"
                            android:textColor="#eee">
                        </Button>
                        <TextView
                            android:id="@+id/tv_btsec11" android:tag="tv_btsec11"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_alignBaseline="@+id/bt11"
                            android:textSize="18sp" android:textColor="#eee"
                            android:text=":00"
                            />
                    </RelativeLayout>
                    <RelativeLayout
                        android:id="@+id/ll12"
                        android:tag="ll12"
                        android:layout_width="0dp" android:layout_height="wrap_content">
                        <Button android:id="@+id/bt12" android:text="@string/text_30sec"
                            android:tag="bt12"
                            android:gravity="end|center"
                            android:layout_width="match_parent" android:layout_height="wrap_content"
                            android:layout_margin="5sp" android:height="60sp"
                            android:textSize="24sp" android:background="@drawable/plastic_button"
                            android:textColor="#eee">
                        </Button>
                        <TextView
                            android:id="@+id/tv_btsec12" android:tag="tv_btsec12"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_alignBaseline="@+id/bt12"
                            android:textSize="18sp" android:textColor="#eee"
                            android:text=":00"
                            />
                    </RelativeLayout>
				</TableRow>
			</TableLayout>

			<LinearLayout android:id="@+id/LL_Bottom"
				android:layout_height="wrap_content" android:layout_width="wrap_content"
				android:layout_gravity="center_horizontal" android:paddingTop="10sp">

				<ToggleButton android:text="@+id/ToggleButton01"
					android:id="@+id/tgbImmediate" android:layout_width="wrap_content"
					android:layout_height="wrap_content" android:layout_margin="5sp"
					android:width="120sp" android:height="60sp" android:textOn="@string/tg_button_on"
					android:textOff="@string/tg_button_on" android:background="@drawable/btn_toggle_bg"
					android:textColor="#eee">
				</ToggleButton>
				<ToggleButton android:id="@+id/tgbPrecall"
					android:layout_width="wrap_content" android:layout_height="wrap_content"
					android:layout_margin="5sp" android:width="120sp" android:height="60sp"
					android:text="@string/tg_button_321" android:textOff="@string/tg_button_321"
					android:textOn="@string/tg_button_321" android:background="@drawable/btn_toggle_bg"
					android:textColor="#eee">
				</ToggleButton>
			</LinearLayout>

		</LinearLayout>
		<!-- End many button layout -->

		<!-- Start ONE button layout -->
		<LinearLayout android:id="@+id/LL_SubButton"
			android:orientation="vertical" android:layout_height="fill_parent"
			android:layout_width="fill_parent" android:layout_marginBottom="30sp"
			android:background="@drawable/bg">

			<Button android:id="@+id/btStartStopBig" android:layout_height="fill_parent"
				android:layout_width="fill_parent" android:padding="7sp"
				android:layout_margin="5sp" android:text="@string/text_start" android:textSize="40sp"
				android:background="@drawable/plastic_button" android:textColor="#eee">
			</Button>
		</LinearLayout>
		<!-- End ONE button layout -->

	</ViewFlipper>
</LinearLayout>

